radio Btt fixed, Insight updated

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="keywords" content="Lottery, Lotto, 로또, 로또 번호, 로또 예측, 로또 분석, lottery machine" />
+    <meta name="author" content="Jacob Kim" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Application making Lottery numbers and giving inspection of lottery history."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
