--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <script data-ad-client="ca-pub-9600444412382789" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <title>로또 번호 제조기</title>
   </head>
   <body>
