--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <script data-ad-client="ca-pub-9600444412382789" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- addsense
+<script data-ad-client="ca-pub-9600444412382789" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    -->    
 
     <title>로또 번호 제조기</title>
   </head>
