--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 <script data-ad-client="ca-pub-9600444412382789" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     -->    
 
-    <title>로또 번호 제조기</title>
+    <title>로또 인사이트</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
